@@ -33,9 +33,12 @@ import java.sql.Statement;
 import java.sql.Types;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
+import java.util.Optional;
+import java.util.function.Supplier;
 import javax.inject.Inject;
 import javax.inject.Provider;
 import javax.inject.Singleton;
@@ -76,40 +79,56 @@ public class SQLStatisticAggregationTransactionHelper {
 
     private static final String AGGREGATE = "AGGREGATE";
 
-    private static final String AGGREGATE_COUNT = "" +
+    private static final String AGGREGATE_COUNT = condenseSql("" +
             "SELECT COUNT(*) " +
-            "FROM SQL_STAT_VAL_SRC ";
+            "FROM SQL_STAT_VAL_SRC ");
 
-    private static final String DELETE_OLD_STATS = "" +
+    private static final String DELETE_OLD_STATS = condenseSql("" +
             "DELETE FROM SQL_STAT_VAL " +
-            "WHERE TIME_MS < ? ";
+            "WHERE PRES = ? " +
+            "AND VAL_TP = ? " +
+            "AND TIME_MS < ? ");
 
-    private static final String DELETE_UNUSED_KEYS = "" +
+    private static final String DELETE_UNUSED_KEYS = condenseSql("" +
             "DELETE FROM SQL_STAT_KEY " +
             "WHERE NOT EXISTS ( " +
             "        SELECT null " +
             "        FROM SQL_STAT_VAL " +
             "        WHERE FK_SQL_STAT_KEY_ID = SQL_STAT_KEY.ID " +
-            ")";
+            ")");
 
-    // Mark a batch of n records as 'processing' so we can work on them in
-    // isolation
-    private static final String STAGE1_MARK_PROCESSING = "" +
-            "UPDATE SQL_STAT_VAL_SRC " +
-            "SET " +
-            "PROCESSING = 1 " +
-            "LIMIT ? ";
+    // Find the highest ID out of the top n rows of the table. This ID or below then marks
+    // the batch to work on. This means we always work on the oldest n rows which is fairer
+    // and avoids conflict with the new rows being added to the top of the table.
+    // TODO The max on a sub-select triggers a 'filesort' which may not be optimal.
+    //   Other options are:
+    //   select id from SQL_STAT_VAL_SRC order by id limit ?,1;  where ? is batch size - 1 but
+    //     this will return null if there are less rows than batch size.
+    //   select max(id), count(1) from SQL_STAT_VAL_SRC;  then if count is less than batch size
+    //     use the max(id) else use the limit ?,1 approach with ? = count - 1
+    // For info these are timings (secs) for various approaches to getting the max id of the top n ids
+    // with 1.6 mil rows.
+    // | 0.03840500 | select max(id), count(1) from SQL_STAT_VAL_SRC                                    |
+    // | 0.11568625 | select id from SQL_STAT_VAL_SRC order by id limit 999999,1                        |
+    // | 0.42600850 | select max(id) from (select id from SQL_STAT_VAL_SRC order by id limit 1000000) v |
+    private static final String STAGE1_ESTABLISH_BATCH = condenseSql("""
+            SELECT MAX(ID) \
+            FROM
+                (SELECT ID
+                FROM SQL_STAT_VAL_SRC \
+                ORDER BY ID\
+                LIMIT ?) v""");
 
     // @formatter:off
-    private static final String STAGE1_AGGREGATE_SOURCE_KEY = "" +
+    private static final String STAGE1_AGGREGATE_SOURCE_KEY = condenseSql("" +
             "INSERT INTO SQL_STAT_KEY (NAME, VER) " +
             "SELECT " +
             "    DISTINCT(SSVS.NAME), " +
             "    1 " +
             "FROM SQL_STAT_VAL_SRC SSVS " +
             "LEFT OUTER JOIN SQL_STAT_KEY SSK on (SSK.NAME = SSVS.NAME) " +
-            "WHERE SSVS.PROCESSING = 1 " +
-            "AND SSK.ID IS NULL";
+            "WHERE SSVS.ID <= ? " +
+            "AND SSK.ID IS NULL");
 
     // grab the oldest n records from SVS and aggregate those records with the
     // right time range
@@ -117,44 +136,24 @@ public class SQLStatisticAggregationTransactionHelper {
     // then insert or update the values back into SV
     // relies on SV having a unique key index on FK_SQL_STAT_KEY_ID, TIME_MS,
     // PRES, VAL_TP
-    private static final String SPROC_STAGE1_UPSERT = "{call stage1Upsert (?, ?, ?, ?, ?)}";
+    private static final String SPROC_STAGE1_UPSERT = "{call stage1Upsert (?, ?, ?, ?, ?, ?)}";
 
-    private static final String STAGE1_AGGREGATE_DELETE_SOURCE = "" +
+    private static final String STAGE1_AGGREGATE_DELETE_SOURCE = condenseSql("" +
             "DELETE FROM SQL_STAT_VAL_SRC " +
-            "WHERE PROCESSING = 1 " +
+            "WHERE ID <= ? " +
             "AND TIME_MS < ? " +
-            "AND VAL_TP = ?";
-
-    // Find if records exist in STAT_VAL older than a given age for a given
-    // precision
-    private static final String STAGE2_FIND_ROWS_TO_MOVE = "" +
-            "SELECT " +
-            "   EXISTS( " +
-            "       SELECT " +
-            "           NULL " +
-            "       FROM SQL_STAT_VAL SSV" +
-            "       WHERE SSV.TIME_MS < ? " +
-            "       AND SSV.PRES = ? " + // old PRES
-            "       AND SSV.VAL_TP = ? " +
-            "   ) ";
+            "AND VAL_TP = ?");
 
     // Copy stats from one precision to a coarser precision, aggregating them
     // with any stats
     // in the target precision if there are any
-    private static final String SPROC_STAGE2_UPSERT = "{call stage2Upsert (?, ?, ?, ?, ?, ?)}";
-
-    // Delete records from STAT_VAL older than a certain threshold for a given
-    // precision
-    private static final String STAGE2_AGGREGATE_DELETE_OLD_PRECISION = "" +
-            "DELETE FROM SQL_STAT_VAL " +
-            "WHERE TIME_MS < ? " +
-            "AND PRES = ? " +
-            "AND VAL_TP = ?";
+    private static final String SPROC_STAGE2_UPSERT =
+            "{call stage2Upsert (?, ?, ?, ?, ?, ?, ?, ?, ?, ?)}";
 
     private final SQLStatisticsDbConnProvider sqlStatisticsDbConnProvider;
     private final Provider<SQLStatisticsConfig> sqlStatisticsConfigProvider;
+    private final ConnectionUtil connectionUtil;
 
-    // @formatter:on
     private final AggregateConfig[] aggregateConfig = new AggregateConfig[]{
             // Stuff Older than a month move to month precision
 
@@ -187,9 +186,11 @@ public class SQLStatisticAggregationTransactionHelper {
 
     @Inject
     SQLStatisticAggregationTransactionHelper(final SQLStatisticsDbConnProvider sqlStatisticsDbConnProvider,
-                                             final Provider<SQLStatisticsConfig> sqlStatisticsConfigProvider) {
+                                             final Provider<SQLStatisticsConfig> sqlStatisticsConfigProvider,
+                                             final ConnectionUtil connectionUtil) {
         this.sqlStatisticsDbConnProvider = sqlStatisticsDbConnProvider;
         this.sqlStatisticsConfigProvider = sqlStatisticsConfigProvider;
+        this.connectionUtil = connectionUtil;
     }
 
     public static final long round(final long timeMs, final int precision) {
@@ -208,24 +209,27 @@ public class SQLStatisticAggregationTransactionHelper {
 
         taskContext.info(() -> prefix + "\n " + trace);
 
-        final int count = ConnectionUtil.executeUpdate(connection, sql, args);
+        final int count = connectionUtil.executeUpdate(connection, sql, args);
 
         LOGGER.debug(() -> LogUtil.message("doAggretateSQL - {} - {} in {} - {}",
                 prefix, ModelStringUtil.formatCsv(count), time, trace));
         return count;
     }
 
-    protected long doLongSelect(final Connection connection, final TaskContext taskContext, final String prefix,
-                                final String sql, final List<Object> args) throws SQLException {
+    protected Optional<Long> doLongSelect(final Connection connection,
+                                          final TaskContext taskContext,
+                                          final String prefix,
+                                          final String sql,
+                                          final List<Object> args) throws SQLException {
         final LogExecutionTime time = new LogExecutionTime();
         final String trace = buildSQLTrace(sql, args);
 
         taskContext.info(() -> prefix + "\n " + trace);
 
-        final long result = ConnectionUtil.executeQueryLongResult(connection, sql, args);
+        final Long result = connectionUtil.executeQueryLongResult(connection, sql, args);
 
         LOGGER.debug("doAggretateSQL - {} - {} in {} - {}", prefix, ModelStringUtil.formatCsv(result), time, trace);
-        return result;
+        return Optional.ofNullable(result);
     }
 
     public AggregateConfig[] getAggregateConfig() {
@@ -236,7 +240,7 @@ public class SQLStatisticAggregationTransactionHelper {
                                              final String sql,
                                              final List<Object> args)
             throws SQLException {
-        return ConnectionUtil.executeQueryLongResult(connection, sql, args);
+        return connectionUtil.executeQueryLongResult(connection, sql, args);
     }
 
     public Long getAggregateMinId() throws SQLException {
@@ -257,36 +261,68 @@ public class SQLStatisticAggregationTransactionHelper {
         }
     }
 
-    public Long deleteOldStats(final TaskContext taskContext) throws SQLException {
-        return deleteOldStats(Instant.now(), taskContext);
-    }
-
-    public Long deleteOldStats(final Instant timeNow,
+    public long deleteOldStats(final Instant timeNow,
                                final TaskContext taskContext) throws SQLException {
-        final AggregateConfig mostCoarseLevel = new AggregateConfig(StatisticType.COUNT, MS_MONTH, MONTH_PRECISION,
+        final AggregateConfig mostCoarseLevel = new AggregateConfig(
+                StatisticType.COUNT,
+                MS_MONTH,
+                MONTH_PRECISION,
                 DEFAULT_PRECISION);
 
         final StroomDuration maxProcessingAge = sqlStatisticsConfigProvider.get().getMaxProcessingAge();
 
-        LOGGER.debug("Deleting stats using a max processing age of {}ms", maxProcessingAge);
-
         if (maxProcessingAge != null) {
+            LOGGER.debug("Deleting stats using a max processing age of {}ms", maxProcessingAge);
             // convert the max age into a time bucket so we can delete
             // everything older than that time bucket
             final long oldestTimeBucketToKeep = mostCoarseLevel.getAggregateToMs(
                     timeNow.minus(maxProcessingAge.getDuration()));
             try (final Connection connection = sqlStatisticsDbConnProvider.getConnection()) {
-                final long rowsAffected = doAggregateSQL_Update(
-                        connection,
-                        taskContext,
-                        "",
-                        DELETE_OLD_STATS,
-                        Collections.singletonList(oldestTimeBucketToKeep));
-                LOGGER.info("Deleted {} stats with a time older than {}", rowsAffected,
+                long totalRowsAffected = 0;
+                // Do one delete per level so we can interrupt sooner and can use the
+                // PK index more efficiently, i.e. (PRES = X AND VAL_TP = Y AND TIME_MS <= Z)
+                for (final AggregateConfig level : aggregateConfig) {
+                    final String prefix = LogUtil.message(
+                            "Deleting stats. Precision {}, type: {} " +
+                                    "and a time older than {}",
+                            level.getPrecision(),
+                            level.getValueType(),
+                            DateUtil.createNormalDateTimeString(oldestTimeBucketToKeep));
+
+                    final long rowsAffected = doAggregateSQL_Update(
+                            connection,
+                            taskContext,
+                            prefix,
+                            DELETE_OLD_STATS,
+                            List.of(
+                                    level.getPrecision(),
+                                    level.getValueType().getPrimitiveValue(),
+                                    oldestTimeBucketToKeep));
+
+                    LOGGER.debug(() -> LogUtil.message(
+                            "Deleted {} stats with precision {}, type: {} " +
+                                    "and a time older than {}",
+                            rowsAffected,
+                            level.getPrecision(),
+                            level.getValueType(),
+                            DateUtil.createNormalDateTimeString(oldestTimeBucketToKeep)));
+
+                    totalRowsAffected += rowsAffected;
+                    if (Thread.currentThread().isInterrupted()) {
+                        LOGGER.debug(() -> LogUtil.message(
+                                "Thread interrupted in stage 2 aggregation (batch level). " +
+                                        "targetPrecision: {}, lastPrecision: {}, valueType: {} " +
+                                        "Safely stopping here.",
+                                level.getPrecision(), level.getLastPrecision(), level.getValueType()));
+                        break;
+                    }
+                }
+                LOGGER.debug("Deleted {} stats with a time older than {}", totalRowsAffected,
                         DateUtil.createNormalDateTimeString(oldestTimeBucketToKeep));
-                return rowsAffected;
+                return totalRowsAffected;
             }
         } else {
+            LOGGER.debug("No maxProcessingAge configured so don't delete any old stats");
             return 0L;
         }
     }
@@ -307,13 +343,13 @@ public class SQLStatisticAggregationTransactionHelper {
 
             taskContext.info(() -> "\n " + sql);
 
-            final int count = ConnectionUtil.executeUpdate(
+            final int count = connectionUtil.executeUpdate(
                     connection,
                     DELETE_UNUSED_KEYS,
                     Collections.emptyList());
 
             LOGGER.debug(() -> LogUtil.message("deleteUnusedKeys - {} in {} - {}",
-                    ModelStringUtil.formatCsv(count), time, cleanSqlForLogs(sql)));
+                    ModelStringUtil.formatCsv(count), time, condenseSql(sql)));
 
             return count;
         }
@@ -326,89 +362,111 @@ public class SQLStatisticAggregationTransactionHelper {
         long processCount = 0;
 
         try (final Connection connection = sqlStatisticsDbConnProvider.getConnection()) {
-            // mark a set of records in STAT_VAL_SRC as being processed so all
-            // DML below can filter by them
-            // records are chosen at random to avoid overhead of a sort
-            processCount = doAggregateSQL_Update(
+            // Find the highest ID of the bottom n rows of the sql_stat_val_src table.
+            // We can then use this ID as the predicate in later statements to ensure we
+            // are processing the right rows.
+            final Optional<Long> optBatchMaxId = doLongSelect(
                     connection,
                     taskContext,
-                    AGGREGATE,
-                    STAGE1_MARK_PROCESSING,
-                    Collections.singletonList(batchSize));
+                    "Establishing batch to process",
+                    STAGE1_ESTABLISH_BATCH,
+                    List.of(batchSize));
 
-            // Fill the STAT_KEY table with any new Keys
-            doAggregateSQL_Update(
-                    connection,
-                    taskContext,
-                    AGGREGATE,
-                    STAGE1_AGGREGATE_SOURCE_KEY,
-                    null);
+            if (optBatchMaxId.isEmpty()) {
+                LOGGER.debug("No rows found in {}, nothing to do for stage 1",
+                        SQLStatisticNames.SQL_STATISTIC_VALUE_SOURCE_TABLE_NAME);
 
-            // Stage 1 is about handling values in the source table that are
-            // implied to be precision 0 and aggregating them into SQL_STAT_VAL
-            // at the correct precision for their age.
-            for (final AggregateConfig level : aggregateConfig) {
-                if (level.getLastPrecision() == 0) {
-                    // precision => bucket size
-                    // DEFAULT: 0 => 1 ms
-                    // HOUR:    6 => 1_000_000 ms (true hour: 3_600_000 ms)
-                    // DAY:     7 => 10_000_000 ms (true day: 86_400_000 ms)
-                    // MONTH:   9 => 1_000_000_000 ms (true 31day month = 2_678_400_000 ms)
-                    final long bucketSize = (long) Math.pow(10, level.getPrecision());
-                    final String bucketSizeStr = ModelStringUtil.formatDurationString(bucketSize);
-                    final long aggregateToMs = level.getAggregateToMs(timeNow);
+            } else {
+                final long batchMaxId = optBatchMaxId.get();
+                // Fill the STAT_KEY table with any new Keys
+                doAggregateSQL_Update(
+                        connection,
+                        taskContext,
+                        AGGREGATE,
+                        STAGE1_AGGREGATE_SOURCE_KEY,
+                        List.of(batchMaxId));
 
-                    final String newPrefix = prefix + " Source "
-                            + level.getValueType() + " < "
-                            + DateUtil.createNormalDateTimeString(aggregateToMs)
-                            + " P=" + level.getPrecision()
-                            + " (Size " + bucketSizeStr + ")";
+                // Stage 1 is about handling values in the source table that are
+                // implied to be precision 0 and aggregating them into SQL_STAT_VAL
+                // at the correct precision for their age.
+                for (final AggregateConfig level : aggregateConfig) {
+                    if (level.getLastPrecision() == 0) {
+                        // precision => bucket size
+                        // DEFAULT: 0 => 1 ms
+                        // HOUR:    6 => 1_000_000 ms (true hour: 3_600_000 ms)
+                        // DAY:     7 => 10_000_000 ms (true day: 86_400_000 ms)
+                        // MONTH:   9 => 1_000_000_000 ms (true 31day month = 2_678_400_000 ms)
+                        final long bucketSize = (long) Math.pow(10, level.getPrecision());
+                        final String bucketSizeStr = ModelStringUtil.formatDurationString(bucketSize);
+                        final long aggregateToMs = level.getAggregateToMs(timeNow);
 
-                    // insert a batch of data in STAT_VAL_SRC into
-                    // SQL_STAT_VAL_TMP,
-                    // rounding the times to the required
-                    // precision and aggregating the values up
-                    // if it is a count stat then both the VAL and CNT columns
-                    // get the sum of the grouped stats
-                    // if it is a value stat then the VAL column gets the sum of
-                    // the grouped stats and the CNT column
-                    // gets the count of the number of records in the group
+                        final String newPrefix = prefix
+                                + " type: " + level.getValueType()
+                                + " aggregateTo: < " + DateUtil.createNormalDateTimeString(aggregateToMs)
+                                + " Precision: " + level.getPrecision()
+                                + " (Bucket size " + bucketSizeStr + ")"
+                                + " batchMaxId: " + batchMaxId
+                                + " batchSize: " + batchSize;
 
-                    final int rowsAffectedOnUpsert = callUpsert1(connection,
-                            taskContext,
-                            newPrefix,
-                            level.getSQLPrecision(),
-                            level.getPrecision(),
-                            level.getValueType().getPrimitiveValue(),
-                            aggregateToMs);
+                        // insert a batch of data in STAT_VAL_SRC into
+                        // SQL_STAT_VAL_TMP,
+                        // rounding the times to the required
+                        // precision and aggregating the values up
+                        // if it is a count stat then both the VAL and CNT columns
+                        // get the sum of the grouped stats
+                        // if it is a value stat then the VAL column gets the sum of
+                        // the grouped stats and the CNT column
+                        // gets the count of the number of records in the group
 
-                    // delete records from STAT_VAL_SRC up to maxSrcId and below
-                    // aggregateToMs,
-                    // i.e. all the records we have just upserted.
-                    int rowsAffectedOnDelete = 0;
-                    if (rowsAffectedOnUpsert > 0) {
-                        rowsAffectedOnDelete = doAggregateSQL_Update(
+                        int rowsAffectedOnUpsert = callUpsert1(
                                 connection,
                                 taskContext,
                                 newPrefix,
-                                STAGE1_AGGREGATE_DELETE_SOURCE,
-                                Arrays.asList(
-                                        aggregateToMs,
-                                        level.getValueType().getPrimitiveValue()));
+                                level.getSQLPrecision(),
+                                level.getPrecision(),
+                                level.getValueType().getPrimitiveValue(),
+                                aggregateToMs,
+                                batchMaxId);
+                        LOGGER.debug("rowsAffectedOnUpsert: {}", rowsAffectedOnUpsert);
+                        processCount += rowsAffectedOnUpsert;
+
+                        // delete records from STAT_VAL_SRC up to maxSrcId and below
+                        // aggregateToMs,
+                        // i.e. all the records we have just upserted.
+                        int rowsAffectedOnDelete = 0;
+                        if (rowsAffectedOnUpsert > 0) {
+                            rowsAffectedOnDelete = doAggregateSQL_Update(
+                                    connection,
+                                    taskContext,
+                                    newPrefix,
+                                    STAGE1_AGGREGATE_DELETE_SOURCE,
+                                    List.of(batchMaxId,
+                                            aggregateToMs,
+                                            level.getValueType().getPrimitiveValue()));
+                            LOGGER.debug("rowsAffectedOnDelete: {}", rowsAffectedOnDelete);
+                        }
+
+                        if (rowsAffectedOnUpsert > 0 && rowsAffectedOnDelete == 0) {
+                            LOGGER.error(
+                                    "Deleted {} rows from SQL_STAT_VAL_SRC but didn't affect any " +
+                                            "rows in SQL_STAT_VAL, may have lost some stats",
+                                    rowsAffectedOnDelete);
+                        }
                     }
 
-                    if (rowsAffectedOnUpsert > 0 && rowsAffectedOnDelete == 0) {
-                        LOGGER.error(
-                                "Deleted {} rows from SQL_STAT_VAL_SRC but didn't affect any " +
-                                        "rows in SQL_STAT_VAL, may have lost some stats",
-                                rowsAffectedOnDelete);
+                    // If we bail here then we have ensured all keys for our batch, merged all data for
+                    // this aggregateConfig into SQL_STAT_VAL and deleted the SQL_STAT_VAL_SRC rows
+                    // for this aggregateConfig.  Thus, next time round it can just form a new batch
+                    // with whatever is left.
+                    if (Thread.currentThread().isInterrupted()) {
+                        LOGGER.debug("Thread interrupted during stage 1 aggregation. " +
+                                "Safely stopping here.");
+                        break;
                     }
                 }
             }
         }
-
         return processCount;
-
     }
 
     private int callUpsert1(final Connection connection,
@@ -417,27 +475,28 @@ public class SQLStatisticAggregationTransactionHelper {
                             final byte sqlPrecision,
                             final byte precision,
                             final byte valueType,
-                            final long aggregateToMs) throws SQLException {
+                            final long aggregateToMs,
+                            final long batchMaxId) throws SQLException {
         int count;
         final LogExecutionTime time = new LogExecutionTime();
-        taskContext.info(() -> prefix + "\n " + SPROC_STAGE1_UPSERT);
+        taskContext.info(() -> prefix);
 
-        LOGGER.debug(() -> ">>> " + cleanSqlForLogs(SPROC_STAGE1_UPSERT));
         try (final CallableStatement stmt = connection.prepareCall(SPROC_STAGE1_UPSERT)) {
             // Set IN parameters
             stmt.setByte(1, sqlPrecision);
             stmt.setByte(2, precision);
             stmt.setByte(3, valueType);
             stmt.setLong(4, aggregateToMs);
+            stmt.setLong(5, batchMaxId);
 
             // Set OUT parameter
-            stmt.registerOutParameter(5, Types.INTEGER);
+            stmt.registerOutParameter(6, Types.INTEGER);
 
             // Execute stored procedure
             stmt.execute();
 
             // Get the OUT parameter
-            count = stmt.getInt(5);
+            count = stmt.getInt(6);
         } catch (final SQLException sqlException) {
             LOGGER.error("callUpsert1", sqlException);
             throw sqlException;
@@ -454,12 +513,24 @@ public class SQLStatisticAggregationTransactionHelper {
                             final byte targetSqlPrecision,
                             final byte lastPrecision,
                             final byte valueType,
-                            final long aggregateToMs) throws SQLException {
-        int count;
+                            final long aggregateToMs,
+                            final int batchSize,
+                            final int batchNo) throws SQLException {
+        int upsertCount;
+        int deleteCount;
         final LogExecutionTime time = new LogExecutionTime();
-        taskContext.info(() -> prefix + "\n " + SPROC_STAGE2_UPSERT);
 
-        LOGGER.debug(">>> " + cleanSqlForLogs(SPROC_STAGE2_UPSERT));
+        final Supplier<String> infoSupplier = () -> prefix +
+                " - Type: " + valueType
+                + ", aggregateTo: < " + DateUtil.createNormalDateTimeString(aggregateToMs)
+                + ", precision: " + lastPrecision + "=>" + targetPrecision
+                + ", batch no.: " + batchNo
+                + ", batchSize: " + batchSize;
+        LOGGER.debug(() -> LogUtil.message("aggregateToMs: {} ({})",
+                aggregateToMs, Instant.ofEpochMilli(aggregateToMs)));
+
+        taskContext.info(infoSupplier);
+
         try (final CallableStatement stmt = connection.prepareCall(SPROC_STAGE2_UPSERT)) {
             // Set IN parameters
             stmt.setByte(1, targetPrecision);
@@ -467,33 +538,55 @@ public class SQLStatisticAggregationTransactionHelper {
             stmt.setByte(3, lastPrecision);
             stmt.setByte(4, valueType);
             stmt.setLong(5, aggregateToMs);
-
-            // Set OUT parameter
-            stmt.registerOutParameter(6, Types.INTEGER);
+            stmt.setInt(6, batchSize);
+            stmt.setBoolean(7, LOGGER.isTraceEnabled());
+            // Set OUT parameters
+            final int upsertCountParamNum = 8;
+            final int deleteCountParamNum = 9;
+            final int logParamNum = 10;
+            stmt.registerOutParameter(upsertCountParamNum, Types.INTEGER);
+            stmt.registerOutParameter(deleteCountParamNum, Types.INTEGER);
+            stmt.registerOutParameter(logParamNum, Types.VARCHAR);
 
             // Execute stored procedure
             stmt.execute();
 
             // Get the OUT parameter
-            count = stmt.getInt(6);
+            upsertCount = stmt.getInt(upsertCountParamNum);
+            deleteCount = stmt.getInt(deleteCountParamNum);
+
+            // If trace is enabled the sproc will return useful logging
+            if (LOGGER.isTraceEnabled()) {
+                LOGGER.trace("stage2Upsert log:{}", stmt.getString(logParamNum));
+            }
         } catch (final SQLException sqlException) {
             LOGGER.error("callUpsert2", sqlException);
             throw sqlException;
         }
 
-        LOGGER.debug("callUpsert2 - {} - {} in {}", prefix, ModelStringUtil.formatCsv(count), time);
-        return count;
+        LOGGER.debug(() -> LogUtil.message("callUpsert2 - {} - upsertCount: {}, deleteCount: {} in {}",
+                infoSupplier.get(),
+                ModelStringUtil.formatCsv(upsertCount),
+                ModelStringUtil.formatCsv(deleteCount),
+                time));
+        // The deleteCount is what we care about as that tells us how many were moved up to the next
+        // level
+        return deleteCount;
     }
 
-    public void aggregateConfigStage2(final TaskContext taskContext, final String prefix, final Instant timeNow)
+    public long aggregateConfigStage2(final TaskContext taskContext,
+                                      final String prefix,
+                                      final int stage2BatchSize,
+                                      final Instant timeNow)
             throws SQLException {
+        long totalCount = 0;
+        List<Integer> iterationsLog = new ArrayList<>(aggregateConfig.length);
+        final LogExecutionTime logExecutionTime = new LogExecutionTime();
         try (final Connection connection = sqlStatisticsDbConnProvider.getConnection()) {
             // Stage 2 is about moving stats from one precision in STAT_VAL to a
             // coarser one once they have become too old for their current
             // precision
             for (final AggregateConfig level : aggregateConfig) {
-                final long bucketSize = (long) Math.pow(10, level.getPrecision());
-                final String bucketSizeStr = ModelStringUtil.formatDurationString(bucketSize);
                 final long aggregateToMs = level.getAggregateToMs(timeNow);
                 final byte targetPrecision = level.getPrecision();
                 final byte lastPrecision = level.getLastPrecision();
@@ -503,48 +596,52 @@ public class SQLStatisticAggregationTransactionHelper {
                 // if statement to ignore the case of DEFAULT->DEFAULT where
                 // there is nothing to roll up
                 if (targetPrecision != lastPrecision) {
-                    final String newPrefix = prefix + " Existing " + level.getValueType() + " < "
-                            + DateUtil.createNormalDateTimeString(aggregateToMs) + " P=" + level.getLastPrecision()
-                            + ">" + level.getPrecision() + " (Size " + bucketSizeStr + ")";
 
-                    // check if there are any rows that need moving to a new
-                    // precision for this time range, precision
-                    // and value type, returns zero if none exist, one
-                    // otherwise. Don't car how many rows there are
-                    // just that there are more than zero. This stops the upsert
-                    // from changing rows for no reason.
-                    final long rowsExist = doLongSelect(connection, taskContext, newPrefix, STAGE2_FIND_ROWS_TO_MOVE,
-                            Arrays.asList(aggregateToMs, lastPrecision, valueType));
-
-                    if (rowsExist == 1) {
-                        // Find any stats that are too old for their current
-                        // precision and roll them up into a
-                        // coarser precision, aggregating with existing stats if
-                        // required. Does an update or
-                        // insert depending on if the target precision has a
-                        // record or not.
-                        final int upsertCount = callUpsert2(connection,
+                    int deleteCount;
+                    int batchNo = 0;
+                    // Keep calling it till we get a partial batch
+                    do {
+                        deleteCount = callUpsert2(
+                                connection,
                                 taskContext,
-                                newPrefix,
+                                prefix,
                                 targetPrecision,
                                 targetSqlPrecision,
                                 lastPrecision,
                                 valueType,
-                                aggregateToMs);
+                                aggregateToMs,
+                                stage2BatchSize,
+                                ++batchNo);
 
-                        if (upsertCount > 0) {
-                            // now delete the old stats that we just copied up
-                            // into the new precision
-                            doAggregateSQL_Update(connection, taskContext, newPrefix,
-                                    STAGE2_AGGREGATE_DELETE_OLD_PRECISION,
-                                    Arrays.asList(aggregateToMs, lastPrecision, valueType));
+                        totalCount += deleteCount;
+                        if (Thread.currentThread().isInterrupted()) {
+                            LOGGER.debug("Thread interrupted in stage 2 aggregation (batch level). " +
+                                    "targetPrecision: {}, lastPrecision: {}, valueType: {} " +
+                                    "batchNo: {}." +
+                                    "Safely stopping here.",
+                                    targetPrecision, lastPrecision, valueType, batchNo);
+                            break;
                         }
-                    } else {
-                        LOGGER.debug("No rows to move");
-                    }
+                    } while (deleteCount >= stage2BatchSize);
+                    iterationsLog.add(batchNo);
+                }
+                if (Thread.currentThread().isInterrupted()) {
+                    LOGGER.debug("Thread interrupted in stage 2 aggregation. " +
+                                    "targetPrecision: {}, lastPrecision: {}, valueType: {}." +
+                                    "Safely stopping here.",
+                            targetPrecision, lastPrecision, valueType);
+                    break;
                 }
             }
         }
+        LOGGER.info("Completed stage 2 aggregation with max iterations {} in {}{}",
+                iterationsLog.stream().max(Comparator.naturalOrder()).orElse(0),
+                logExecutionTime.getDuration(),
+                (Thread.currentThread().isInterrupted()
+                        ? " (INTERRUPTED)"
+                        : ""));
+
+        return totalCount;
     }
 
     public void truncateTable(final String tableName) throws SQLException {
@@ -554,12 +651,9 @@ public class SQLStatisticAggregationTransactionHelper {
         try (final Connection connection = sqlStatisticsDbConnProvider.getConnection()) {
             try (final Statement statement = connection.createStatement()) {
                 final String sql = TRUNCATE_TABLE_SQL + tableName;
-                // (TRUNCATE_TABLE_SQL
-                // +
-                // tableName);
                 statement.execute(sql);
 
-                LOGGER.debug("Truncated table {} in {}ms", tableName, logExecutionTime.getDuration());
+                LOGGER.debug("Truncated table {} in {}ms", tableName, logExecutionTime.getDurationMs());
 
             } catch (final SQLException sqlException) {
                 LOGGER.error("truncating table {}", tableName, sqlException);
@@ -575,7 +669,7 @@ public class SQLStatisticAggregationTransactionHelper {
             try (final Statement statement = connection.createStatement()) {
                 final String sql = CLEAR_TABLE_SQL + tableName;
                 statement.execute(sql);
-                LOGGER.debug("Cleared table {} in {}ms", tableName, logExecutionTime.getDuration());
+                LOGGER.debug("Cleared table {} in {}ms", tableName, logExecutionTime.getDurationMs());
 
             } catch (final SQLException sqlException) {
                 LOGGER.error("Clearing table {}", tableName, sqlException);
@@ -600,11 +694,17 @@ public class SQLStatisticAggregationTransactionHelper {
                 sqlString.append(c);
             }
         }
-        return cleanSqlForLogs(sqlString.toString());
+        return condenseSql(sqlString.toString());
     }
 
-    private static String cleanSqlForLogs(final String sql) {
-        return sql.replaceAll("\\s+", " ");
+
+    /**
+     * Replace all contiguous white space with one space so we can format the SQL nicely
+     * in source but store have java hold it in condensed form.
+     */
+    static String condenseSql(final String sql) {
+        return sql.replaceAll("\\s+", " ")
+                .trim();
     }
 
     public static class AggregateConfig {
@@ -636,6 +736,9 @@ public class SQLStatisticAggregationTransactionHelper {
             return precision;
         }
 
+        /**
+         * Used for the MySQL ROUND(number , precision) func
+         */
         public byte getSQLPrecision() {
             return (byte) (-1 * precision);
         }
